--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=api-ai
-spring.ai.openai.api-key=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
+spring.ai.openai.api-key=""
 
 spring.ai.chat.memory.repository.jdbc.initialize-schema=never
 
