Criação e Melhorias de Entidades

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=api-ai
-spring.ai.openai.api-key=""
+spring.ai.openai.api-key=
 
 spring.ai.chat.memory.repository.jdbc.initialize-schema=never
 
